[package]
name = "cuda-oxide"
version = "0.3.1"
authors = ["Maxwell Bruce <max.bruce12@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/Protryon/cuda-oxide"
description = "cuda-oxide provides a high-level, rusty wrapper over CUDA. It provides the best safety one can get when working with hardware."
keywords = [ "cuda", "gpu", "parallel" ]

[dependencies]
num_enum = "0.5"

[dev-dependencies]
rand = "0.8"